--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,19 +19,21 @@ jobs:
         with:
           ref: main  # Ensure we're on the main branch
       
-      - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.8.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Install sshpass
+        run: sudo apt-get update && sudo apt-get install -y sshpass
       
-      - name: Add host key
+      - name: Setup SSH key
         run: |
           mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
       
       - name: Deploy to server
+        env:
+          SSHPASS: ${{ secrets.SSH_PASSPHRASE }}
         run: |
-          ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "sudo apt update && \
+          sshpass -e ssh -i ~/.ssh/id_rsa ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "sudo apt update && \
           cd ~/Travel_Buddy && \
           git config --local credential.helper store && \
           echo 'https://${{ secrets.GH_PAT_TOKEN }}@github.com/DAMG7245/Travel_Buddy.git' > ~/.git-credentials && \
