--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,11 @@ services:
       - PORT=${PORT:-8000}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - GOOGLE_MAPS_API_KEY=${GOOGLE_MAPS_API_KEY}
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - GOOGLE_CSE_ID=${GOOGLE_CSE_ID}
+      - AMADEUS_CLIENT_ID=${AMADEUS_CLIENT_ID}
+      - AMADEUS_CLIENT_SECRET=${AMADEUS_CLIENT_SECRET}
+      - GOOGLE_PLACE_API_KEY=${GOOGLE_PLACE_API_KEY}
     volumes:
       - ./server:/app
     networks:
