--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/react": "^1.2.8",
     "@auth0/auth0-react": "^2.3.0",
     "@googlemaps/js-api-loader": "^1.16.8",
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.4",
@@ -26,6 +27,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.72.1",
     "@types/google.maps": "^3.58.1",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -35,6 +37,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.55.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.0",
     "remark-gfm": "^4.0.1",
@@ -44,7 +47,8 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
