--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,14 @@ services:
       - GOOGLE_PLACE_API_KEY=${GOOGLE_PLACE_API_KEY}
       - WEATHER_API_KEY=${WEATHER_API_KEY}
       - OPENWEATHER_API_KEY=${OPENWEATHER_API_KEY}
+      - SNOWFLAKE_ACCOUNT=PDLYNPP-GU68962
+      - SNOWFLAKE_USER=PRIYAV139
+      - SNOWFLAKE_PASSWORD=NFTsjyBxew6sPRX
+      - SNOWFLAKE_WAREHOUSE=COMPUTE_WH
+      - SNOWFLAKE_DATABASE=FINAL_PROJECT
+      - SNOWFLAKE_ROLE=ACCOUNTADMIN
+      - SNOWFLAKE_SCHEMA_DBT=PUBLIC
+      - OPENWEATHER_API_URL=${OPENWEATHER_API_URL}
     volumes:
       - ./server:/app
     networks:
