--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,29 +1,66 @@
+# FROM python:3.10-slim
+
+# WORKDIR /app
+
+# ENV PYTHONDONTWRITEBYTECODE=1
+# ENV PYTHONUNBUFFERED=1
+
+# # Install system dependencies with space conservation
+# RUN apt-get update -o Acquire::AllowInsecureRepositories=true \
+#     && apt-get install -y --no-install-recommends --allow-unauthenticated gcc \
+#     && apt-get clean \
+#     && rm -rf /var/lib/apt/lists/* /var/cache/apt/archives/*
+
+# # Copy only the requirements file first
+# COPY requirements.txt .
+
+# # Install Python dependencies
+# RUN pip install --no-cache-dir --upgrade pip \
+#     && pip install --no-cache-dir -r requirements.txt \
+#     && rm -rf /root/.cache/pip
+
+# # Copy application code
+# COPY . .
+
+# # Expose port for the application
+# EXPOSE 8000
+
+# # Command to run the application
+# CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+
+
+
+
+# Use official Python 3.10 slim image
 FROM python:3.10-slim
 
+# Set working directory
 WORKDIR /app
 
+# Environment variables for Python
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
-# Install system dependencies with space conservation
-RUN apt-get update -o Acquire::AllowInsecureRepositories=true \
-    && apt-get install -y --no-install-recommends --allow-unauthenticated gcc \
+# Install system dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
+    libpq-dev \
+    curl \
+    build-essential \
     && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /var/cache/apt/archives/*
-
-# Copy only the requirements file first
-COPY requirements.txt .
+    && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
+COPY requirements.txt .
 RUN pip install --no-cache-dir --upgrade pip \
     && pip install --no-cache-dir -r requirements.txt \
     && rm -rf /root/.cache/pip
 
-# Copy application code
+# Copy project files
 COPY . .
 
-# Expose port for the application
+# Expose port for FastAPI server
 EXPOSE 8000
 
-# Command to run the application
+# Run the FastAPI app using Uvicorn
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
